First Working copy with Read Me
contains read me file ,
and  update  for any  UTF-8 related issues

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-FirstPage=Page1???? ?????
-SecondPage=Page2
+FirstPage=Page 1
+SecondPage=Page 2
 HomePage=Home
-Welcome=Welcome to 
+Welcome=Welcome to
