--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,4 +1,4 @@
-FirstPage=Page1wer
-SecondPage=Page2wer
-HomePage=Homewer
-Welcome=Welcome to 
+FirstPage=Page 1
+SecondPage=Page 2
+HomePage=Page d'accueil
+Welcome=Bienvenue sur la
