--- a/src/main/resources/messages_hi.properties
+++ b/src/main/resources/messages_hi.properties
@@ -1,4 +1,5 @@
-FirstPage=???? ?????
-SecondPage=???? ?????
-HomePage=???? ?????
-Welcome= ???? ?????
+FirstPage=पहला पन्ना
+SecondPage=दूसरा पन्ना
+HomePage=घर पन्ना
+Welcome= स्वागत हे
+
