--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,4 @@
-FirstPage=Page1???? ?????
-SecondPage=Page2
+FirstPage=Page 1
+SecondPage=Page 2
 HomePage=Home
-Welcome=Welcome to 
+Welcome=Welcome to
